--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,19 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 	</dependencies>
-
+    <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <name>Releases</name>
+      <url>http://ec2-34-227-28-246.compute-1.amazonaws.com:8081/repository/maven-releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>nexus</id>
+      <name>Snapshot</name>
+      <url>http://ec2-34-227-28-246.compute-1.amazonaws.com:8081/repository/maven-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+	
 	<build>
      <finalName>tawazun</finalName>
 		<plugins>
